FIxed sizing issues on mobile devices

--- a/style.css
+++ b/style.css
@@ -132,13 +132,17 @@ body {
 }
 
 .container {
-    padding: 20px;
     margin: 0;
+    padding: 20px;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+    max-height: 100vh;
     width: 100vw;
     display: flex;
     align-items: start;
     justify-content: center;
     flex-wrap: wrap;
+    overflow-y: auto;
     gap: 20px;
     background-color: antiquewhite;
 }
